--- a/inflowencer/Gemfile
+++ b/inflowencer/Gemfile
@@ -5,7 +5,12 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
-
+gem 'watir', '>= 6.7.1'
+gem 'rest-client'
+gem 'mechanize'
+gem 'capybara'
+gem 'selenium-webdriver'
+gem 'headless'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.3'
 # Use postgresql as the database for Active Record
