--- a/reacher/Gemfile
+++ b/reacher/Gemfile
@@ -5,7 +5,16 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
-
+ruby '2.4.0'
+gem 'watir', '>= 6.7.1'
+gem 'rest-client'
+gem 'google-cloud'
+gem 'engtagger'
+gem 'figaro'
+gem 'mechanize'
+gem 'capybara'
+gem 'selenium-webdriver'
+gem 'chromedriver-helper'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.4'
 # Use postgresql as the database for Active Record
@@ -38,6 +47,11 @@ gem 'jbuilder', '~> 2.5'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
+  gem 'better_errors'
+  gem 'binding_of_caller'
+  gem 'railroady'
+  gem "pry-byebug"
+  gem 'pry-rails'
 end
 
 group :development do
